dataset/local/tf_ecs_awsvpc_network_mode/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_task_definition
        values:
          network_mode: "awsvpc"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_task_definition
        values:
          network_mode: "bridge"
