dataset/local/tf_ecs_awsvpc_network_mode/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-awsvpc-network-mode
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-awsvpc-network-mode
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-awsvpc-network-mode
    kind: Plan
    resources:
      - bad-plan
    result: fail
